added notification reciever

--- a/public/home.html
+++ b/public/home.html
@@ -18,7 +18,7 @@
 			<header class="headingTitle">WELCOME TO DREAMLAND</header>
       <ul class="ul">
         <li class="li"><a class="active" href="home.html">Home</a></li>
-        <li class="li"><a href="">Lets Chat Living!</a></li>
+        <li class="li"><a href="letschatliving.html">Lets Chat Living!</a></li>
         <li class="li"><a href="#contact">Profile</a></li>
         <li class="li"><a href="#about">About</a></li>
         <li class="li"><a href="index.html">Support</a></li>
