--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 		<title>LetsChatLiving - Dreamland</title>
 	</head>
 	<body>
+		
 		<header class="headingTitle">WELCOME TO DREAMLAND</header>
 		<ul class="ul">
 			<li class="li"><a class="active" href="home.html">Home</a></li>
@@ -56,6 +57,16 @@
 				var randomId = document.getElementById("randomNum")
 				randomId.innerHTML = Math.floor((Math.random() * 50000) + 10000);
 		  	}
+			  var socket = io();
+			  socket.on('notification', function (message) { 
+
+
+				console.log(message);
+			});
+
+			
 		</script>
+		
 	</body>
+	
 </html>
