--- a/public/index.html
+++ b/public/index.html
@@ -57,16 +57,10 @@
 				var randomId = document.getElementById("randomNum")
 				randomId.innerHTML = Math.floor((Math.random() * 50000) + 10000);
 		  	}
-			  var socket = io();
-			  socket.on('notification', function (message) { 
-
-
-				console.log(message);
-			});
-
+			  
 			
 		</script>
-		
+		<script src="./js/notification.js"></script>
 	</body>
 	
 </html>
