fixed issues causing server to crash

--- a/public/index.html
+++ b/public/index.html
@@ -52,14 +52,8 @@
 				</form>
 			</main>
 		</div>
-		<script>
-			function numberGen() {
-				var randomId = document.getElementById("randomNum")
-				randomId.innerHTML = Math.floor((Math.random() * 50000) + 10000);
-		  	}
-			  
-			
-		</script>
+	
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.16/socket.io.min.js"></script>
 		<script src="./js/notification.js"></script>
 	</body>
 	
